--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ACA Solutions</title>
-  <base href="/">
-
+  <base id="baseAddr" href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- -------------- Meta and Title -------------- -->
   <meta charset="utf-8">
@@ -20,10 +19,13 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
   <!-- -------------- CSS - theme -------------- -->
-  <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">
-
+  <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/js/plugins/magnific/magnific-popup.css">
   <!-- -------------- CSS - allcp forms -------------- -->
+
+
   <link rel="stylesheet" type="text/css" href="assets/allcp/forms/css/forms.min.css">
+   <link rel="stylesheet" type="text/css" href="assets/allcp/forms/css/forms.css">
   <!-- -------------- Datatables CSS -------------- -->
   <link rel="stylesheet" type="text/css" href="assets/js/plugins/datatables/media/css/dataTables.bootstrap.css">
   <link rel="stylesheet" type="text/css" href="assets/js/plugins/datatables/extensions/Editor/css/dataTables.editor.css">
@@ -34,7 +36,7 @@
   <link rel="stylesheet" type="text/css" href="assets/js/plugins/select2/css/core.css">
   <!-- -------------- Favicon -------------- -->
   <link rel="shortcut icon" href="assets/img/favicon.ico">
-
+  <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">
   <!-- -------------- IE8 HTML5 support  -------------- -->
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
@@ -45,6 +47,7 @@
   <!-- Polyfill(s) for older browsers -->
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">
 </head>
 
 <body>
@@ -56,27 +59,28 @@
   <!-- -------------- jQuery -------------- -->
   <script src="assets/js/jquery/jquery-1.11.1.min.js"></script>
   <script src="assets/js/jquery/jquery_ui/jquery-ui.min.js"></script>
+  <script src="assets/js/main.js"></script>
   <script src="assets/js/plugins/jquery.maxlength.min.js"></script>
   <script src="assets/js/plugins/jquery.bootstrap-duallistbox.min.js"></script>
   <!-- -------------- Datatables JS -------------- -->
-  <script src="assets/js/plugins/datatables/media/js/jquery.dataTables.js"></script>
+  <!--<script src="assets/js/plugins/datatables/media/js/jquery.dataTables.js"></script>
   <script src="assets/js/plugins/datatables/extensions/TableTools/js/dataTables.tableTools.min.js"></script>
   <script src="assets/js/plugins/datatables/extensions/ColReorder/js/dataTables.colReorder.min.js"></script>
-  <script src="assets/js/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
+  <script src="assets/js/plugins/datatables/media/js/dataTables.bootstrap.js"></script>-->
 
 
   <!-- -------------- Select2 JS -------------- -->
-  <script src="assets/js/plugins/select2/select2.min.js"></script>
+  <!--<script src="assets/js/plugins/select2/select2.min.js"></script>-->
 
 
   <!-- -------------- Theme Scripts -------------- -->
-  <script src="assets/js/utility/utility.js"></script>
-  <script src="assets/js/demo/demo.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/demo/widgets_sidebar.js"></script>
-  <script src="assets/js/pages/user-forms-additional-inputs.js"></script>
-  <script src="assets/js/plugins/canvasbg/canvasbg.js"></script>
-
+  <!--<script src="assets/js/utility/utility.js"></script>-->
+  <!--<script src="assets/js/demo/demo.js"></script>-->
+ 
+  <!--<script src="assets/js/demo/widgets_sidebar.js"></script>-->
+  <!--<script src="assets/js/pages/user-forms-additional-inputs.js"></script>
+  <script src="assets/js/plugins/canvasbg/canvasbg.js"></script>-->
+  <!--<script src="assets/js/pages/management-tools-modals.js"></script>-->
 
   <!-- -------------- Page JS -------------- -->
   <!--<script src="/assets/js/demo/charts/highcharts.js"></script>-->
