Signed-off-by: Multi Control Group

--- a/src/index.html
+++ b/src/index.html
@@ -62,11 +62,12 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/plugins/jquery.maxlength.min.js"></script>
   <script src="assets/js/plugins/jquery.bootstrap-duallistbox.min.js"></script>
+  <script src="assets/js/pages/user-forms-additional-inputs.js"></script>
   <!-- -------------- Datatables JS -------------- -->
-  <!--<script src="assets/js/plugins/datatables/media/js/jquery.dataTables.js"></script>
+  <script src="assets/js/plugins/datatables/media/js/jquery.dataTables.js"></script>
   <script src="assets/js/plugins/datatables/extensions/TableTools/js/dataTables.tableTools.min.js"></script>
   <script src="assets/js/plugins/datatables/extensions/ColReorder/js/dataTables.colReorder.min.js"></script>
-  <script src="assets/js/plugins/datatables/media/js/dataTables.bootstrap.js"></script>-->
+  <script src="assets/js/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
 
 
   <!-- -------------- Select2 JS -------------- -->
@@ -74,18 +75,31 @@
 
 
   <!-- -------------- Theme Scripts -------------- -->
-  <!--<script src="assets/js/utility/utility.js"></script>-->
-  <!--<script src="assets/js/demo/demo.js"></script>-->
  
-  <!--<script src="assets/js/demo/widgets_sidebar.js"></script>-->
-  <!--<script src="assets/js/pages/user-forms-additional-inputs.js"></script>
-  <script src="assets/js/plugins/canvasbg/canvasbg.js"></script>-->
-  <!--<script src="assets/js/pages/management-tools-modals.js"></script>-->
+  <script src="assets/js/demo/widgets_sidebar.js"></script>
+  <<script src="assets/js/pages/user-forms-additional-inputs.js"></script>
+  <script src="assets/js/plugins/canvasbg/canvasbg.js"></script>
+  <script src="assets/js/pages/management-tools-modals.js"></script>
 
   <!-- -------------- Page JS -------------- -->
-  <!--<script src="/assets/js/demo/charts/highcharts.js"></script>-->
 
   <!-- -------------- /Scripts -------------- -->
+  <!--<script src="assets/js/jquery/jquery-1.11.3.min.js"></script>
+<script src="assets/js/jquery/jquery_ui/jquery-ui.min.js"></script>
+<script src="assets/js/plugins/moment/moment.min.js"></script>
+<script src="assets/js/plugins/duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
+<script src="assets/js/plugins/maxlength/bootstrap-maxlength.min.js"></script>
+<script src="assets/js/plugins/select2/select2.min.js"></script>
+<script src="assets/js/plugins/typeahead/typeahead.bundle.min.js"></script>
+<script src="assets/js/plugins/tagmanager/tagmanager.js"></script>
+<script src="assets/js/plugins/daterange/daterangepicker.min.js"></script>
+<script src="assets/js/plugins/datepicker/js/bootstrap-datetimepicker.min.js"></script>
+<script src="assets/js/plugins/colorpicker/js/bootstrap-colorpicker.min.js"></script>
+
+<script src="assets/js/utility/utility.js"></script>
+<script src="assets/js/demo/demo.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/pages/user-forms-additional-inputs.js"></script>-->
 </body>
 
 </html>
