--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
   <!-- -------------- CSS - theme -------------- -->
-  <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.min.css">
+  <!--<link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.min.css">-->
   <link rel="stylesheet" type="text/css" href="assets/js/plugins/magnific/magnific-popup.css">
   <!-- -------------- CSS - allcp forms -------------- -->
 
@@ -36,7 +36,7 @@
   <link rel="stylesheet" type="text/css" href="assets/js/plugins/select2/css/core.css">
   <!-- -------------- Favicon -------------- -->
   <link rel="shortcut icon" href="assets/img/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">
+  <!--<link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">-->
   <!-- -------------- IE8 HTML5 support  -------------- -->
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
@@ -47,7 +47,7 @@
   <!-- Polyfill(s) for older browsers -->
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-   <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">
+   <!--<link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">-->
 </head>
 
 <body>
@@ -75,7 +75,7 @@
 
 
   <!-- -------------- Theme Scripts -------------- -->
- 
+
   <script src="assets/js/demo/widgets_sidebar.js"></script>
   <<script src="assets/js/pages/user-forms-additional-inputs.js"></script>
   <script src="assets/js/plugins/canvasbg/canvasbg.js"></script>
