added the add client onboarding

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
   <!-- -------------- Theme Scripts -------------- -->
 
   <script src="assets/js/demo/widgets_sidebar.js"></script>
-  <<script src="assets/js/pages/user-forms-additional-inputs.js"></script>
+  <!--<script src="assets/js/pages/user-forms-additional-inputs.js"></script>-->
   <script src="assets/js/plugins/canvasbg/canvasbg.js"></script>
   <script src="assets/js/pages/management-tools-modals.js"></script>
 
